# elementary-isw-controller

./: README.md  meson.build
data/: com.github.tuurdutoit.elementary-isw-controller.appdata.xml.in  com.github.tuurdutoit.elementary-isw-controller.desktop.in  com.github.tuurdutoit.elementary-isw-controller.gschema.xml  css.gresource.xml  meson.build
debian/: changelog  control  copyright  rules
po/: nl.po
scripts/: build.sh  install.sh  run.sh
src/: Application.vala  MainWindow.vala
src/service/: ISWService.vala  MediaService.vala  SoundboardService.vala
src/view/: MediaView.vala  SoundboardView.vala
